fix server start + tables